manifests/airgap-install/01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ate-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: podcertificate-controller-system
