manifests/airgap-install/05-pod-certificate-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podcertificate-controller
  namespace: podcertificate-controller-system
  labels:
    app: podcertificate-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podcertificate-controller
  template:
    metadata:
      labels:
        app: podcertificate-controller
    spec:
      containers:
      - name: controller
        image: REPLACE_REGISTRY/substrate-podcertcontroller:REPLACE_IMAGE_TAG
        args:
        - --in-cluster=true
        - --sharding-pod-namespace=$(POD_NAMESPACE)
        - --sharding-pod-name=$(POD_NAME)
        - --sharding-pod-uid=$(POD_UID)
        - --sharding-application-name=podcertificate-controller
        - --service-dns-ca-pool=/run/ca-state/service-dns-pool.json
        - --pod-identity-ca-pool=/run/ca-state/pod-identity-pool.json
        volumeMounts:
        - name: ca-state
          mountPath: /run/ca-state
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add: ["NET_BIND_SERVICE"]
            drop: ["ALL"]
          readOnlyRootFilesystem: true
      volumes:
      - name: ca-state
        projected:
          sources:
          - secret:
              name: service-dns-ca-pool
              items:
              - key: pool
                path: service-dns-pool.json
          - secret:
              name: pod-identity-ca-pool
              items:
              - key: pool
                path: pod-identity-pool.json
      dnsPolicy: Default
      nodeSelector:
        kubernetes.io/os: linux
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
