manifests/airgap-install/12-atelet.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: atelet
  namespace: ate-system
  labels:
    app: atelet
spec:
  selector:
    matchLabels:
      app: atelet
  template:
    metadata:
      labels:
        app: atelet
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      serviceAccountName: atelet
      containers:
      - name: atelet
        image: REPLACE_REGISTRY/substrate-atelet:REPLACE_IMAGE_TAG
        args:
        # Disable GCP-specific auth; use private registry directly
        - --gcp-auth-for-image-pulls=false
        securityContext:
          privileged: true
        ports:
        - name: grpc
          containerPort: 8085
          hostPort: 8085
        - name: prometheus
          containerPort: 9090
          hostPort: 9090
          protocol: TCP
        volumeMounts:
        - name: run-ateom
          mountPath: /var/lib/ateom-gvisor
      volumes:
      - name: run-ateom
        hostPath:
          path: /var/lib/ateom-gvisor
          type: DirectoryOrCreate
