manifests/airgap-install/11-atenet-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns
  namespace: ate-system
  labels:
    app: dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dns
  template:
    metadata:
      labels:
        app: dns
    spec:
      serviceAccountName: atenet-dns
      shareProcessNamespace: true
      containers:
      - name: coredns
        image: REPLACE_REGISTRY/coredns:1.11.1
        imagePullPolicy: IfNotPresent
        args: ["-conf", "/etc/coredns/Corefile"]
        volumeMounts:
        - name: dns-config-volume
          mountPath: /etc/coredns
        ports:
        - name: dns
          containerPort: 53
          protocol: UDP
        - name: dns-tcp
          containerPort: 53
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: 8181
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
      - name: dns-controller
        image: REPLACE_REGISTRY/substrate-atenet:REPLACE_IMAGE_TAG
        args:
        - "dns"
        - "--log-level=debug"
        - "--interval=10s"
        - "--corefile-path=/etc/coredns/Corefile"
        volumeMounts:
        - name: dns-config-volume
          mountPath: /etc/coredns
      volumes:
      - name: dns-config-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: dns
  namespace: ate-system
  labels:
    app: dns
spec:
  selector:
    app: dns
  type: ClusterIP
  ports:
  - name: dns
    port: 53
    protocol: UDP
  - name: dns-tcp
    port: 53
    protocol: TCP
